# M5PaperS3-UserDemo

./: .gitignore  USB_AUDIO_TEST.md  sdkconfig.defaults
docs/: APP_DEVELOPMENT_GUIDE.md  BOOK_FILE_STRUCTURE.md  BOOK_FORMAT_SPECIFICATION.md  HTTP_API_DOCUMENTATION.md  PERFORMANCE_OPTIMIZATION.md  PROJECT_OVERVIEW.md  PROJECT_SUMMARY.md
main/: CMakeLists.txt  main.cpp
main/apps/: app_bookshelf.cpp  app_home.cpp  app_usb_audio.cpp  app_usb_file.cpp  app_wifi_config.cpp  apps.h
main/hal/: hal.cpp  hal.h  http_file_server.cpp  http_file_server.h
setting-frontend/: README.md  index.html  package-lock.json  package.json  paper_s_3_前端项目设计文档（epub_→_序列图_mvp）.md  vite.config.ts
setting-frontend/src/: App.css  App.tsx  index.css  types.ts
setting-frontend/src/api/: index.ts
setting-frontend/src/components/: BookShelf.css  BookShelf.tsx  CanvasRenderer.ts  EpubToImages.css  EpubToImages.tsx  old.tsx
setting-frontend/src/services/: backendApi.ts  epubProcessor.ts  pageRenderer.ts
setting-frontend/src/utils/: deviceClient.ts  imageEncoder.ts
